refactoring by FRANCOIS + ARTHUR